--- a/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
+++ b/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
@@ -29,20 +29,21 @@
     "        1. [Validation of all initial data choices against original `GiRaFFEfood`, demonstrating agreement to round-off error.](Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb) <font color='green'><b> Patrick Seal of Approval</b></font>\n",
     "1. **GiRaFFE: Solve the GRFFE equations to evolve the initial data forward in time**\n",
     "    1. *Generate main C code driver* for \n",
-    "        1. <font color='yellow'><b> Needs some checking </b></font>[Unstaggered A fields](Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb)\n",
+    "        1. <font color='orange'><b> Needs some checking </b></font>[Unstaggered A fields](Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb)\n",
     "        1. [Staggered A fields](....) **TODO**\n",
-    "    1. The above driver routine pulls together a number of subroutines, called in this order:\n",
-    "        1. First group: Find the right-hand sides of evolution equations for the conservative variables\n",
+    "    1. The above driver routine pulls together several subroutines, called in this order:\n",
+    "        1. First step: Find the right-hand sides of evolution equations for the conservative variables\n",
     "            1. Calculate the gauge terms for $A_k$, $-\\partial_i (\\alpha \\Phi - \\beta^j A_j)$ and $\\tilde{S}_i$, $\\frac{1}{2} \\alpha\\sqrt{\\gamma} T^{\\mu\\nu}_{\\rm EM} g_{\\mu\\nu,i}$, as well as  $\\Phi$, $-\\partial_j (\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi]) - \\xi \\alpha [\\sqrt{\\gamma} \\Phi]$:\n",
-    "                1. *Implementation*; [Unstaggered prescription](Tutorial-GiRaFFE_NRPy-Source_Terms.ipynb)\n",
-    "                    1. See also: [Tutorial for GRFFE](../Tutorial-GRFFE_Equations-Cartesian.ipynb); [Tutorial for GRHD](../Tutorial-GRHD_Equations-Cartesian.ipynb)\n",
+    "                1. *Implementation*: \n",
+    "                    1. [Unstaggered prescription](Tutorial-GiRaFFE_NRPy-Source_Terms.ipynb)\n",
+    "                        1. See also: [Tutorial for GRFFE](../Tutorial-GRFFE_Equations-Cartesian.ipynb); [Tutorial for GRHD](../Tutorial-GRHD_Equations-Cartesian.ipynb)\n",
     "                    1. Staggered prescription: **TODO: create notebook for C code.**\n",
-    "                1. *Validation*\n",
+    "                1. *Validation*:\n",
     "                    1. [Unstaggered prescription](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb)\n",
     "            1. <font color='green'><b> Patrick Seal of Approval </b></font>[Interpolate metric on cell faces:](Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb)\n",
     "                1. Basic interpolation of the metric gridfunctions at cell centers to cell faces given a specific direction. \n",
     "                1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Metric_Face_Values.ipynb)\n",
-    "            1. <font color='yellow'><b> Just spot-checking</b></font>[Reconstruct primitives on cell faces:](Tutorial-GiRaFFE_NRPy-PPM.ipynb)\n",
+    "            1. <font color='orange'><b> Just spot-checking</b></font>[Reconstruct primitives on cell faces:](Tutorial-GiRaFFE_NRPy-PPM.ipynb)\n",
     "                1. This uses the piecewise-parabolic method to reconstruct gridfunctions on cell faces and apply slope-limiting algorithms mitigate the Gibbs phenomenon and preserve shocks.\n",
     "                1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM.ipynb)\n",
     "            1. [Solve the Riemann Problem for $\\tilde{S}_i$:](Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb)\n",
@@ -50,22 +51,25 @@
     "                1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb)\n",
     "            1. <font color='orange'><b> Needs major overhaul </b></font>Solve the Riemann Problem for $A_i$:\n",
     "                1. Here, we apply a similar algorithm as in the previous step to compute the electric field $E_i = \\epsilon_{ijk} v^i B^i$. \n",
-    "                1. [Unstaggered prescription](Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb): \n",
-    "                    1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Afield_flux.ipynb)\n",
-    "                1. Staggered prescription: **TODO: create notebook for C code.**\n",
-    "        1. Second group: \n",
-    "            1. Evolution: Update primitive variables from the evolved conservative variables\n",
-    "                1. Calculate the magnetic field:\n",
-    "                    1. Compute $B^i = \\epsilon^{ijk} \\partial_j A_k$ using standard finite-differencing methods. Care must be taken in the ghost zones to shift the template appropriately to avoid accessing points that are not stored in memory. \n",
-    "                    1. <font color='green'><b> Patrick Seal of Approval</b></font> [Unstaggered prescription](Tutorial-GiRaFFE_NRPy-A2B.ipynb):\n",
-    "                        1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb)\n",
+    "                1. *Implementation*:\n",
+    "                    1. [Unstaggered prescription](Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb): \n",
     "                    1. Staggered prescription: **TODO: create notebook for C code.**\n",
-    "                1. <font color='yellow'><b> Just spot-checking</b></font>[Recalculate $\\bar{v}^i$ and apply fixes to $\\tilde{S}_i$ and $\\bar{v}^i$:](Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
-    "                    1. Apply fixes to $\\tilde{S}_i$, then recompute $\\bar{v}^i$ at the next time step. Then, apply fixes to $\\bar{v}^i$ to preserve current sheets, and recompute $\\tilde{S}_i$ to match.\n",
-    "                    1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
-    "                1. <font color='yellow'><b> Just spot-checking</b></font>[Apply boundary conditions:](Tutorial-GiRaFFE_NRPy-BCs.ipynb)\n",
-    "                    1. Apply linear (To be upgraded?) outer boundary conditions to the vector potential and Valencia three-velocity. \n",
-    "                    1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-BCs.ipynb)\n",
+    "                1. *Validation*:\n",
+    "                    1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Afield_flux.ipynb)\n",
+    "        1. Second step: Update primitive variables from the evolved conservative variables and apply boundary conditions\n",
+    "            1. Calculate the magnetic field:\n",
+    "                1. Compute $B^i = \\epsilon^{ijk} \\partial_j A_k$ using standard finite-differencing methods. Care must be taken in the ghost zones to shift the template appropriately to avoid accessing points that are not stored in memory. \n",
+    "                1. *Implementation*:\n",
+    "                    1. <font color='green'><b> Patrick Seal of Approval</b></font> [Unstaggered prescription](Tutorial-GiRaFFE_NRPy-A2B.ipynb):\n",
+    "                    1. Staggered prescription: **TODO: create notebook for C code.**\n",
+    "                1. *Validation*:\n",
+    "                    1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb)\n",
+    "            1. <font color='orange'><b> Just spot-checking</b></font>[Recalculate $\\bar{v}^i$ and apply fixes to $\\tilde{S}_i$ and $\\bar{v}^i$:](Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
+    "                1. Apply fixes to $\\tilde{S}_i$, then recompute $\\bar{v}^i$ at the next time step. Then, apply fixes to $\\bar{v}^i$ to preserve current sheets, and recompute $\\tilde{S}_i$ to match.\n",
+    "                1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
+    "            1. <font color='orange'><b> Just spot-checking</b></font>[Apply boundary conditions:](Tutorial-GiRaFFE_NRPy-BCs.ipynb)\n",
+    "                1. Apply linear (To be upgraded?) outer boundary conditions to the vector potential and Valencia three-velocity. \n",
+    "                1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-BCs.ipynb)\n",
     "\n",
     "**List of Critical Papers:**\n",
     "1. The original `GiRaFFE` paper: [arxiv:1704.00599](https://arxiv.org/abs/1704.00599)\n",
