--- a/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
+++ b/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
@@ -37,7 +37,7 @@
     "                1. *Implementation*: \n",
     "                    1. [Unstaggered prescription](Tutorial-GiRaFFE_NRPy-Source_Terms.ipynb)\n",
     "                        1. See also: [Tutorial for GRFFE](../Tutorial-GRFFE_Equations-Cartesian.ipynb); [Tutorial for GRHD](../Tutorial-GRHD_Equations-Cartesian.ipynb)\n",
-    "                    1. Staggered prescription: **TODO: create notebook for C code.**\n",
+    "                    1. Staggered prescription: **TODO: create notebook for C code.** (**JULY 2-8**)\n",
     "                1. *Validation*:\n",
     "                    1. [Unstaggered prescription](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb)\n",
     "            1. <font color='green'><b> Patrick Seal of Approval </b></font>[Interpolate metric on cell faces:](Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb)\n",
@@ -46,14 +46,14 @@
     "            1. <font color='orange'><b> Just spot-checking</b></font>[Reconstruct primitives on cell faces:](Tutorial-GiRaFFE_NRPy-PPM.ipynb)\n",
     "                1. This uses the piecewise-parabolic method to reconstruct gridfunctions on cell faces and apply slope-limiting algorithms mitigate the Gibbs phenomenon and preserve shocks.\n",
     "                1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM.ipynb)\n",
-    "            1. [Solve the Riemann Problem for $\\tilde{S}_i$:](Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb)\n",
+    "            1. [Solve the Riemann Problem for $\\tilde{S}_i$:](Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb) (**JULY 2-8**)\n",
     "                1. Use the reconstructed velocities and magnetic fields on the left and right sides of the cell faces to solve the Riemann problem and compute the flux of $\\tilde{S}_i$ on the interface.\n",
     "                1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb)\n",
     "            1. <font color='orange'><b> Needs major overhaul </b></font>Solve the Riemann Problem for $A_i$:\n",
     "                1. Here, we apply a similar algorithm as in the previous step to compute the electric field $E_i = \\epsilon_{ijk} v^i B^i$. \n",
     "                1. *Implementation*:\n",
-    "                    1. [Unstaggered prescription](Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb): \n",
-    "                    1. Staggered prescription: **TODO: create notebook for C code.**\n",
+    "                    1. [Unstaggered prescription](Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb): (**JULY 2-8**)\n",
+    "                    1. Staggered prescription: **TODO: create notebook for C code.** (**JULY 2-8**)\n",
     "                1. *Validation*:\n",
     "                    1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Afield_flux.ipynb)\n",
     "        1. Post-step: Update primitive variables from the evolved conservative variables and apply boundary conditions\n",
@@ -61,7 +61,7 @@
     "                1. Compute $B^i = \\epsilon^{ijk} \\partial_j A_k$ using standard finite-differencing methods. Care must be taken in the ghost zones to shift the template appropriately to avoid accessing points that are not stored in memory. \n",
     "                1. *Implementation*:\n",
     "                    1. <font color='green'><b> Patrick Seal of Approval</b></font> [Unstaggered prescription](Tutorial-GiRaFFE_NRPy-A2B.ipynb):\n",
-    "                    1. Staggered prescription: **TODO: create notebook for C code.**\n",
+    "                    1. Staggered prescription: **TODO: create notebook for C code.** (**JULY 2-8**)\n",
     "                1. *Validation*:\n",
     "                    1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb)\n",
     "            1. <font color='orange'><b> Just spot-checking</b></font>[Recalculate $\\bar{v}^i$ and apply fixes to $\\tilde{S}_i$ and $\\bar{v}^i$:](Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
@@ -107,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
