--- a/Tutorial-SEOBNR_Derivative_Routine.ipynb
+++ b/Tutorial-SEOBNR_Derivative_Routine.ipynb
@@ -415,44 +415,109 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('SymPy version is ', 1.2)\n",
+      "SymPy version is  1.6\n",
       "The relative difference in Hreal is 0.000000000000000e+00\n",
       "The relative difference in dHreal_dx is -1.440874957034916e-14\n",
-      "The relative difference in dHreal_dy is 1.442183891328167e-13\n",
-      "The relative difference in dHreal_dz is -5.859032236190101e-13\n",
-      "The relative difference in dHreal_dpx is 1.460926600271886e-16\n",
-      "The relative difference in dHreal_dpy is 7.941575533518701e-16\n",
-      "The relative difference in dHreal_dpz is -1.685453917954679e-11\n",
-      "The relative difference in dHreal_ds1x is 1.320812262178628e-11\n",
-      "The relative difference in dHreal_ds1y is -3.529922179429383e-11\n",
-      "The relative difference in dHreal_ds1z is -3.531776774182554e-13\n",
-      "The relative difference in dHreal_ds2x is 9.159598976881076e-12\n",
-      "The relative difference in dHreal_ds2y is 1.896716561461409e-11\n",
-      "The relative difference in dHreal_ds2z is -3.089471291652715e-13\n"
+      "The relative difference in dHreal_dy is 1.543046439051535e-13\n",
+      "The relative difference in dHreal_dz is -6.059096751572202e-13\n",
+      "The relative difference in dHreal_dpx is 0.000000000000000e+00\n",
+      "The relative difference in dHreal_dpy is 5.672553952513358e-16\n",
+      "The relative difference in dHreal_dpz is -2.251437052619302e-11\n",
+      "The relative difference in dHreal_ds1x is 1.320682716514366e-11\n",
+      "The relative difference in dHreal_ds1y is -3.057027613238738e-11\n",
+      "The relative difference in dHreal_ds1z is -3.606740398143978e-13\n",
+      "The relative difference in dHreal_ds2x is 9.161231267530079e-12\n",
+      "The relative difference in dHreal_ds2y is 1.641185422235154e-11\n",
+      "The relative difference in dHreal_ds2z is -3.156284046858661e-13\n",
+      "The relative difference in Hreal is 1.118403858247607e-16\n",
+      "The relative difference in dHreal_dx is -8.533853841513374e-15\n",
+      "The relative difference in dHreal_dy is -2.855463534050638e-15\n",
+      "The relative difference in dHreal_dz is -1.204572111840576e-12\n",
+      "The relative difference in dHreal_dpx is 5.415379071378724e-16\n",
+      "The relative difference in dHreal_dpy is -2.433909263689993e-16\n",
+      "The relative difference in dHreal_dpz is 2.263647800028928e-13\n",
+      "The relative difference in dHreal_ds1x is 1.173341939344235e-10\n",
+      "The relative difference in dHreal_ds1y is 1.029325226554718e-11\n",
+      "The relative difference in dHreal_ds1z is -1.018697264018541e-13\n",
+      "The relative difference in dHreal_ds2x is 5.138723418393466e-11\n",
+      "The relative difference in dHreal_ds2y is -1.075347880414080e-10\n",
+      "The relative difference in dHreal_ds2z is -4.889045326980450e-14\n",
+      "The relative difference in Hreal is 0.000000000000000e+00\n",
+      "The relative difference in dHreal_dx is -1.886984046706631e-14\n",
+      "The relative difference in dHreal_dy is 4.231342882269279e-14\n",
+      "The relative difference in dHreal_dz is -6.411288185106400e-15\n",
+      "The relative difference in dHreal_dpx is 0.000000000000000e+00\n",
+      "The relative difference in dHreal_dpy is 5.838068872412422e-16\n",
+      "The relative difference in dHreal_dpz is 2.405325797706944e-11\n",
+      "The relative difference in dHreal_ds1x is 2.937079708104893e-11\n",
+      "The relative difference in dHreal_ds1y is 2.707075860918617e-12\n",
+      "The relative difference in dHreal_ds1z is -3.939354305452325e-15\n",
+      "The relative difference in dHreal_ds2x is 1.868113662118864e-11\n",
+      "The relative difference in dHreal_ds2y is 1.322337201624755e-12\n",
+      "The relative difference in dHreal_ds2z is -5.749938230138741e-15\n"
      ]
     }
    ],
    "source": [
-    "def reset_values(values, tort_value):\n",
+    "def reset_values(values, tort_value,index):\n",
     "    values.clear()\n",
-    "    if tort_value==1:\n",
-    "        values = {'m1': 1.300000000000000e+01, 'm2': 1.100000000000000e+01, 'eta': 2.482638888888889e-01,\n",
-    "                  'x': 1.658426645098320e+01, 'y': 3.975021008701605e-02, 'z': -1.820682538442627e-07,\n",
-    "                  'px': -1.517631642228534e-03, 'py': 2.693180445886167e-01, 'pz': -1.320499830947482e-04,\n",
-    "                  's1x': 2.934751675254397e-02, 's1y': -5.867672205485316e-02, 's1z': 8.802097562761332e-02,\n",
-    "                  's2x': -6.302678133897792e-02, 's2y': 4.200490780215727e-02, 's2z': -2.100705983874398e-02,\n",
-    "                  'KK': 3.913980338468737e-01, 'k0': -7.447639215330089e-01, 'k1': -6.380586501824999e-01,\n",
-    "                  'd1v2': -7.476323019145448e+01,'dheffSSv2':2.105103187692902e+01, 'tortoise': 1,\n",
-    "                  'EMgamma': 0.577215664901532860606512090082402431}\n",
-    "    else:\n",
-    "        values = {'m1': 1.300000000000000e+01, 'm2': 1.100000000000000e+01, 'eta': 2.482638888888889e-01,\n",
-    "                  'x': 1.658426645098320e+01, 'y': 3.975021008701605e-02, 'z': -1.820682538442627e-07,\n",
-    "                  'px': -1.633028076483384e-03, 'py': 2.693177679992048e-01, 'pz': -1.320499818278832e-04,\n",
-    "                  's1x': 2.934751675254397e-02, 's1y': -5.867672205485316e-02, 's1z': 8.802097562761332e-02,\n",
-    "                  's2x': -6.302678133897792e-02, 's2y': 4.200490780215727e-02, 's2z': -2.100705983874398e-02,\n",
-    "                  'KK': 3.913980338468737e-01, 'k0': -7.447639215330089e-01, 'k1': -6.380586501824999e-01,\n",
-    "                  'd1v2': -7.476323019145448e+01,'dheffSSv2':2.105103187692902e+01, 'tortoise': 2,\n",
-    "                  'EMgamma': 0.577215664901532860606512090082402431}\n",
+    "    if index==0:\n",
+    "        if tort_value==1:#-M 13 -m 11 -X 0.1 -Y -0.2 -Z 0.3 -x -0.3 -y 0.2 -z -0.1\n",
+    "            values = {'m1': 1.300000000000000e+01, 'm2': 1.100000000000000e+01, 'eta': 2.482638888888889e-01,\n",
+    "                      'x': 1.658426645098320e+01, 'y': 3.975021008701605e-02, 'z': -1.820682538442627e-07,\n",
+    "                      'px': -1.517631642228534e-03, 'py': 2.693180445886167e-01, 'pz': -1.320499830947482e-04,\n",
+    "                      's1x': 2.934751675254397e-02, 's1y': -5.867672205485316e-02, 's1z': 8.802097562761332e-02,\n",
+    "                      's2x': -6.302678133897792e-02, 's2y': 4.200490780215727e-02, 's2z': -2.100705983874398e-02,\n",
+    "                      'KK': 3.913980338468737e-01, 'k0': -7.447639215330089e-01, 'k1': -6.380586501824999e-01,\n",
+    "                      'd1v2': -7.476323019145448e+01,'dheffSSv2':2.105103187692902e+01, 'tortoise': 1,\n",
+    "                      'EMgamma': 0.577215664901532860606512090082402431}\n",
+    "        else:\n",
+    "            values = {'m1': 1.300000000000000e+01, 'm2': 1.100000000000000e+01, 'eta': 2.482638888888889e-01,\n",
+    "                      'x': 1.658426645098320e+01, 'y': 3.975021008701605e-02, 'z': -1.820682538442627e-07,\n",
+    "                      'px': -1.633028076483384e-03, 'py': 2.693177679992048e-01, 'pz': -1.320499818278832e-04,\n",
+    "                      's1x': 2.934751675254397e-02, 's1y': -5.867672205485316e-02, 's1z': 8.802097562761332e-02,\n",
+    "                      's2x': -6.302678133897792e-02, 's2y': 4.200490780215727e-02, 's2z': -2.100705983874398e-02,\n",
+    "                      'KK': 3.913980338468737e-01, 'k0': -7.447639215330089e-01, 'k1': -6.380586501824999e-01,\n",
+    "                      'd1v2': -7.476323019145448e+01,'dheffSSv2':2.105103187692902e+01, 'tortoise': 2,\n",
+    "                      'EMgamma': 0.577215664901532860606512090082402431}\n",
+    "    elif index==1:#-M 25 -m 10 -X 0.1 -Y -0.0 -Z 0.1 -x -0.2 -y 0.0 -z -0.2\n",
+    "        if tort_value==1:\n",
+    "            values = {'m1': 2.500000000000000e+01, 'm2': 1.000000000000000e+01, 'eta': 2.040816326530612e-01,\n",
+    "                      'x': 1.289689003662444e+01, 'y': 5.495441315063273e-03, 'z': -1.717482806041791e-11,\n",
+    "                      'px': -1.898773926867491e-03, 'py': 3.160984442121970e-01, 'pz': 1.171602901570564e-07,\n",
+    "                      's1x': 5.102040816179230e-02, 's1y': 9.846215537206260e-07, 's1z': 5.102040816473832e-02,\n",
+    "                      's2x': -1.632653061189792e-02, 's2y': -6.762952223804450e-07, 's2z': -1.632653061259188e-02,\n",
+    "                      'KK': 5.642540639599580e-01, 'k0': -1.063532077165767e+00, 'k1': -8.835684149841774e-01,\n",
+    "                      'd1v2': -8.041179092044979e+01,'dheffSSv2':1.125986130778842e+01, 'tortoise': 1,\n",
+    "                      'EMgamma': 0.577215664901532860606512090082402431}\n",
+    "        else:\n",
+    "            values = {'m1': 2.500000000000000e+01, 'm2': 1.000000000000000e+01, 'eta': 2.040816326530612e-01,\n",
+    "                      'x': 1.289689003662444e+01, 'y': 5.495441315063273e-03, 'z': -1.717482806041791e-11,\n",
+    "                      'px': -2.209215477700561e-03, 'py': 3.160983119312114e-01, 'pz': 1.171602905704723e-07,\n",
+    "                      's1x': 5.102040816179230e-02, 's1y': 9.846215537206260e-07, 's1z': 5.102040816473832e-02,\n",
+    "                      's2x': -1.632653061189792e-02, 's2y': -6.762952223804450e-07, 's2z': -1.632653061259188e-02,\n",
+    "                      'KK': 5.642540639599580e-01, 'k0': -1.063532077165767e+00, 'k1': -8.835684149841774e-01,\n",
+    "                      'd1v2': -8.041179092044979e+01,'dheffSSv2':1.125986130778842e+01, 'tortoise': 2,\n",
+    "                      'EMgamma': 0.577215664901532860606512090082402431}\n",
+    "    else:#-M 7 -m 5 -X 0.01 -Y -0.5 -Z 0.03 -x -0.04 -y 0.05 -z -0.06\n",
+    "        if tort_value==1:\n",
+    "            values = {'m1': 7.000000000000000e+00, 'm2': 5.000000000000000e+00, 'eta': 2.430555555555556e-01,\n",
+    "                      'x': 2.633506161699224e+01, 'y': 7.574563213724998e-02, 'z': -2.789625823248071e-08,\n",
+    "                      'px': -7.883793607066706e-04, 'py': 2.068742709904638e-01, 'pz': -7.338789145500886e-04,\n",
+    "                      's1x': 3.417297286269225e-03, 's1y': -1.701385963191495e-01, 's1z': 1.020835932957879e-02,\n",
+    "                      's2x': -6.945454346305877e-03, 's2y': 8.679766617922793e-03, 's2z': -1.041665076794264e-02,\n",
+    "                      'KK': 4.052853693162246e-01, 'k0': -7.706473492549312e-01, 'k1': -6.587426366263742e-01,\n",
+    "                      'd1v2': -7.555647472993827e+01,'dheffSSv2':1.972817669753086e+01, 'tortoise': 1,\n",
+    "                      'EMgamma': 0.577215664901532860606512090082402431}\n",
+    "        else:\n",
+    "            values = {'m1': 7.000000000000000e+00, 'm2': 5.000000000000000e+00, 'eta': 2.430555555555556e-01,\n",
+    "                      'x': 2.633506161699224e+01, 'y': 7.574563213724998e-02, 'z': -2.789625823248071e-08,\n",
+    "                      'px': -8.039726989861640e-04, 'py': 2.068742261404732e-01, 'pz': -7.338789145335709e-04,\n",
+    "                      's1x': 3.417297286269225e-03, 's1y': -1.701385963191495e-01, 's1z': 1.020835932957879e-02,\n",
+    "                      's2x': -6.945454346305877e-03, 's2y': 8.679766617922793e-03, 's2z': -1.041665076794264e-02,\n",
+    "                      'KK': 4.052853693162246e-01, 'k0': -7.706473492549312e-01, 'k1': -6.587426366263742e-01,\n",
+    "                      'd1v2': -7.555647472993827e+01,'dheffSSv2':1.972817669753086e+01, 'tortoise': 2,\n",
+    "                      'EMgamma': 0.577215664901532860606512090082402431}\n",
     "    return values\n",
     "\n",
     "def compute_Hreal(left_sides,right_sides,input_values):\n",
@@ -469,39 +534,57 @@
     "        input_values[str(left_sides[i])] = new_right_sides[i]\n",
     "    return input_values\n",
     "\n",
-    "LALSuite_validated_values = {'Hreal': 9.928923110195770e-01,'dHreal_dx': 9.932484846748471e-04,\n",
+    "LALSuite_validated_values = []\n",
+    "#-M 13 -m 11 -X 0.1 -Y -0.2 -Z 0.3 -x -0.3 -y 0.2 -z -0.1\n",
+    "LALSuite_validated_values.append({'Hreal': 9.928923110195770e-01,'dHreal_dx': 9.932484846748471e-04,\n",
     "                             'dHreal_dy': 2.813294366789505e-06, 'dHreal_dz': 1.926378549762488e-06,\n",
     "                             'dHreal_dpx': -3.710666135737856e-04, 'dHreal_dpy': 6.116199124763537e-02,\n",
     "                             'dHreal_dpz': -5.600910364542288e-07, 'dHreal_ds1x': -1.438467658934620e-05,\n",
     "                             'dHreal_ds1y': -1.319462868057848e-06, 'dHreal_ds1z': 7.665413183773232e-04,\n",
     "                             'dHreal_ds2x': -2.075691477548065e-05,'dHreal_ds2y': 2.456427688083135e-06,\n",
-    "                             'dHreal_ds2z': 8.762835349889455e-04}\n",
-    "\n",
-    "print(\"SymPy version is \",sympy_version_decimal)#TYLERK\n",
+    "                             'dHreal_ds2z': 8.762835349889455e-04})\n",
+    "#-M 25 -m 10 -X 0.1 -Y -0.0 -Z 0.1 -x -0.2 -y 0.0 -z -0.2\n",
+    "LALSuite_validated_values.append({'Hreal': 9.926852598351464e-01, 'dHreal_dx': 1.397519118422771e-03,\n",
+    "                              'dHreal_dy': 1.928133240540033e-06, 'dHreal_dz': -1.215449398950413e-06,\n",
+    "                              'dHreal_dpx': -4.004159849919695e-04, 'dHreal_dpy': 5.701850933742150e-02,\n",
+    "                              'dHreal_dpz': 4.329487960716782e-08, 'dHreal_ds1x': 2.259457049322466e-06,\n",
+    "                              'dHreal_ds1y': -2.544122765762015e-09, 'dHreal_ds1z': 9.834156257814124e-04,\n",
+    "                              'dHreal_ds2x': 5.185557993931246e-06,'dHreal_ds2y': 2.437768415468806e-10,\n",
+    "                              'dHreal_ds2z': 2.111169766641698e-03})\n",
+    "#-M 7 -m 5 -X 0.01 -Y -0.5 -Z 0.03 -x -0.04 -y 0.05 -z -0.06\n",
+    "LALSuite_validated_values.append({'Hreal': 9.955293642650920e-01, 'dHreal_dx': 3.734697245297603e-04,\n",
+    "                                  'dHreal_dy': 1.105998063449349e-06, 'dHreal_dz': 5.367207414282669e-08,\n",
+    "                                  'dHreal_dpx': -1.848412708548443e-04, 'dHreal_dpy': 4.754239153769983e-02,\n",
+    "                                  'dHreal_dpz': -3.549083643069269e-08, 'dHreal_ds1x': -4.819261725948465e-07,\n",
+    "                                  'dHreal_ds1y': 3.333280059627902e-06, 'dHreal_ds1z': 2.201786563823208e-04,\n",
+    "                                  'dHreal_ds2x': -7.576810957551029e-07,'dHreal_ds2y': 6.818093508597533e-06,\n",
+    "                                  'dHreal_ds2z': 2.922663340179887e-04})\n",
     "\n",
     "# We first evaluate Hreal, and add each subexpression to values so we can use them to compute partial derivatives\n",
-    "values = {}\n",
-    "values = reset_values(values,2)\n",
-    "values = compute_Hreal(lhss,rhss,values)\n",
-    "Hreal = values['Hreal']\n",
-    "trusted_Hreal = LALSuite_validated_values['Hreal']\n",
-    "print(\"The relative difference in Hreal is %.15e\" % ((trusted_Hreal - Hreal)/trusted_Hreal))\n",
-    "\n",
+    "print(\"SymPy version is \",sympy_version_decimal)#TYLERK\n",
     "variables_tort2 = [x,y,z]\n",
     "variables_tort1 = [px,py,pz,s1x,s1y,s1z,s2x,s2y,s2z]\n",
     "\n",
-    "for var in variables_tort2:\n",
-    "    Hrealprm = compute_Hreal(lhss_derivative[var],rhss_derivative[var],values)['Hrealprm']\n",
-    "    trusted_Hrealprm = LALSuite_validated_values['dHreal_d'+str(var)]\n",
-    "    print(\"The relative difference in dHreal_d%s is %.15e\" % (var,(trusted_Hrealprm - Hrealprm)/trusted_Hrealprm))\n",
+    "for index in range(3):\n",
+    "    values = {}\n",
+    "    values = reset_values(values,2,index)\n",
+    "    values = compute_Hreal(lhss,rhss,values)\n",
+    "    Hreal = values['Hreal']\n",
+    "    trusted_Hreal = LALSuite_validated_values[index]['Hreal']\n",
+    "    print(\"The relative difference in Hreal is %.15e\" % ((trusted_Hreal - Hreal)/trusted_Hreal))\n",
     "\n",
-    "values = reset_values(values,1)\n",
-    "values = compute_Hreal(lhss,rhss,values)\n",
+    "    for var in variables_tort2:\n",
+    "        Hrealprm = compute_Hreal(lhss_derivative[var],rhss_derivative[var],values)['Hrealprm']\n",
+    "        trusted_Hrealprm = LALSuite_validated_values[index]['dHreal_d'+str(var)]\n",
+    "        print(\"The relative difference in dHreal_d%s is %.15e\" % (var,(trusted_Hrealprm - Hrealprm)/trusted_Hrealprm))\n",
     "\n",
-    "for var in variables_tort1:\n",
-    "    Hrealprm = compute_Hreal(lhss_derivative[var],rhss_derivative[var],values)['Hrealprm']\n",
-    "    trusted_Hrealprm = LALSuite_validated_values['dHreal_d'+str(var)]\n",
-    "    print(\"The relative difference in dHreal_d%s is %.15e\" % (var,(trusted_Hrealprm - Hrealprm)/trusted_Hrealprm))"
+    "    values = reset_values(values,1,index)\n",
+    "    values = compute_Hreal(lhss,rhss,values)\n",
+    "\n",
+    "    for var in variables_tort1:\n",
+    "        Hrealprm = compute_Hreal(lhss_derivative[var],rhss_derivative[var],values)['Hrealprm']\n",
+    "        trusted_Hrealprm = LALSuite_validated_values[index]['dHreal_d'+str(var)]\n",
+    "        print(\"The relative difference in dHreal_d%s is %.15e\" % (var,(trusted_Hrealprm - Hrealprm)/trusted_Hrealprm))"
    ]
   },
   {
@@ -581,21 +664,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
