--- a/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
+++ b/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
@@ -39,14 +39,14 @@
     "                        1. See also: [Tutorial for GRFFE](../Tutorial-GRFFE_Equations-Cartesian.ipynb); [Tutorial for GRHD](../Tutorial-GRHD_Equations-Cartesian.ipynb)\n",
     "                    1. <font color='green'><b> Patrick Seal of Approval</b></font> [Staggered prescription](Tutorial-GiRaFFE_NRPy_staggered-Source_Terms.ipynb)\n",
     "                1. *Validation*:\n",
-    "                    1. [Unstaggered prescription](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb)\n",
+    "                    1. <font color='green'><b> Patrick Seal of Approval </b></font>[Unstaggered prescription](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb)\n",
     "            1. <font color='green'><b> Patrick Seal of Approval </b></font>[Interpolate metric on cell faces:](Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb)\n",
     "                1. Basic interpolation of the metric gridfunctions at cell centers to cell faces given a specific direction. \n",
-    "                1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Metric_Face_Values.ipynb)\n",
+    "                1. <font color='green'><b> Patrick Seal of Approval </b></font>[**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Metric_Face_Values.ipynb)\n",
     "            1. <font color='green'><b> Patrick Seal of Approval</b></font> [Reconstruct primitives on cell faces:](Tutorial-GiRaFFE_NRPy-PPM.ipynb)\n",
     "                1. This uses the piecewise-parabolic method (PPM) to reconstruct gridfunctions on cell faces and apply slope-limiting algorithms mitigate the Gibbs phenomenon and preserve shocks.\n",
-    "                1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM.ipynb)\n",
-    "            1. [<font color='green'><b>Patrick Seal of Approval</b> Calculate the flux term for $\\tilde{S}_i$:](Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb) (**JULY 2-8**)\n",
+    "                1. <font color='green'><b> Patrick Seal of Approval </b></font>[**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM.ipynb)\n",
+    "            1. <font color='green'><b>Patrick Seal of Approval</b></font> [Calculate the flux term for $\\tilde{S}_i$:](Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb) (**JULY 2-8**)\n",
     "                1. Use the reconstructed velocities and magnetic fields on the left and right sides of the cell faces to solve the Riemann problem and compute the flux of $\\tilde{S}_i$ on the interface.\n",
     "                1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb)\n",
     "            1. <font color='green'><b> Patrick Seal of Approval</b></font> Calculate the flux term for $A_i$:\n",
@@ -95,7 +95,7 @@
     "    sys.path.append(nrpy_dir_path)\n",
     "\n",
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
-    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"GiRaFFE_NRPy_Tutorial\")"
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"GiRaFFE_NRPy_Tutorial\",location_of_template_file=os.path.join(\"..\"))"
    ]
   }
  ],
